--- a/gcp_disk/update_disk.yaml
+++ b/gcp_disk/update_disk.yaml
@@ -6,14 +6,14 @@
     disk_size:
     disk_zone:
     disk_project:
-    
+
   tasks:
   - name: update a disk
     google.cloud.gcp_compute_disk:
-      name: {{disk_name}}
-      size_gb: {{disk_size}}
-      zone: {{disk_zone}}
-      project: {{disk_project}}
+      name: "{{disk_name}}"
+      size_gb: "{{disk_size}}"
+      zone: "{{disk_zone}}"
+      project: "{{disk_project}}"
       auth_kind: serviceaccount
       service_account_file: "cred.json"
       state: present
